test/deprecated/IO/specailWritersReturnErrorMessage/wrbWriteln.good
wrbWriteln.chpl:4: error: illegal use of return value from 'writeln'. Note: if you wish to detect early EOF from a write call, check for an EofError using a try-catch block
