test/deprecated/IO/specailWritersReturnErrorMessage/wrbWriteln.chpl
use IO;

var fw = openTempFile().writer();
if fw.writeln("yep") {
    writeln("nope");
}
